[gd_scene load_steps=24 format=3 uid="uid://bo0tqunn5ba34"]

[ext_resource type="Script" uid="uid://dsluei4a2v7x6" path="res://scenes/enemies/enemy1/enemy_stand_and_look.gd" id="1_jatj5"]
[ext_resource type="Shader" uid="uid://6yeo1c81tl53" path="res://shaders/outerBushes.gdshader" id="2_yj12u"]
[ext_resource type="Texture2D" uid="uid://bjql4kkg0jy4" path="res://scenes/enemies/enemy1/enemy_body_spritesheet.png" id="3_yj12u"]
[ext_resource type="Texture2D" uid="uid://cem845ub2fsis" path="res://scenes/enemies/enemy1/enemy_mask_spritesheet.png" id="4_cim20"]
[ext_resource type="Texture2D" uid="uid://cg8v7xryf038s" path="res://scenes/enemies/enemy1/512x512 textures (61).png" id="5_4aica"]
[ext_resource type="AudioStream" uid="uid://fv8f5813p0x0" path="res://assets/audio/sfx/enemy/enemy_positional.ogg" id="6_yj12u"]
[ext_resource type="AudioStream" uid="uid://dr1hevt2ehtxv" path="res://assets/audio/sfx/enemy/enemy_turn.ogg" id="7_cim20"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_m0bq8"]
domain_warp_amplitude = 100.0
domain_warp_frequency = 0.5

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_u8gn5"]
seamless = true
noise = SubResource("FastNoiseLite_m0bq8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d6oql"]
shader = ExtResource("2_yj12u")
shader_parameter/render_noise = false
shader_parameter/noise_texture = SubResource("NoiseTexture2D_u8gn5")
shader_parameter/amplitude = 0.2
shader_parameter/time_scale = 0.04
shader_parameter/noise_scale = 0.001
shader_parameter/rotation_strength = 0.4
shader_parameter/rotation_pivot = Vector2(-0.265, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq2de"]
atlas = ExtResource("3_yj12u")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6oql"]
atlas = ExtResource("3_yj12u")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08wgd"]
atlas = ExtResource("3_yj12u")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1twna"]
atlas = ExtResource("3_yj12u")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3nxvx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq2de")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6oql")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_08wgd")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1twna")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8r5ae"]
atlas = ExtResource("4_cim20")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh30d"]
atlas = ExtResource("4_cim20")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlg88"]
atlas = ExtResource("4_cim20")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a72l0"]
atlas = ExtResource("4_cim20")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_u7h1f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r5ae")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh30d")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlg88")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a72l0")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5uu7d"]
radius = 13.0384

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_u8gn5"]
polygon = PackedVector2Array(-34, 45, 0, -15, 29, 46, 0, -46)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_mq2de"]
polygon = PackedVector2Array(-82, 123, 76, 122, 87, 126, -103, 126)

[node name="enemyStandAndLook" type="Node2D"]
z_index = 1
z_as_relative = false
y_sort_enabled = true
script = ExtResource("1_jatj5")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -191.0
offset_top = -171.0
offset_right = 195.0
offset_bottom = 148.0
color = Color(0.241156, 0.241156, 0.241156, 1)

[node name="Animated_body" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_d6oql")
sprite_frames = SubResource("SpriteFrames_3nxvx")
animation = &"down"

[node name="Animated_mask" type="AnimatedSprite2D" parent="."]
light_mask = 0
sprite_frames = SubResource("SpriteFrames_u7h1f")
animation = &"down"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5uu7d")

[node name="light" type="Node2D" parent="."]
position = Vector2(0, -9)
metadata/_edit_lock_ = true

[node name="PointLight2D" type="PointLight2D" parent="light"]
color = Color(0.478431, 0.211765, 0.482353, 1)
energy = 3.0
blend_mode = 2
shadow_enabled = true
texture = ExtResource("5_4aica")
texture_scale = 0.35

[node name="LightOccluder2D" type="LightOccluder2D" parent="light"]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, 11)
occluder = SubResource("OccluderPolygon2D_u8gn5")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="light"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(2, -19)
occluder = SubResource("OccluderPolygon2D_mq2de")

[node name="Area2D" type="Area2D" parent="light"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="light/Area2D"]
visible = false
polygon = PackedVector2Array(0, 2, -41, 71, -2, 80, 34, 72)

[node name="killTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="lookAtTimer" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = false
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="enemyPositional" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_yj12u")
max_distance = 200.0
attenuation = 1.5
panning_strength = 2.5
bus = &"Enemy"

[node name="enemyTurn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_cim20")
volume_db = -2.971
max_distance = 200.0
attenuation = 1.5
panning_strength = 2.5
bus = &"Enemy"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="light/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="light/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="killTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="lookAtTimer" to="." method="_on_look_at_timer_timeout"]
